# snappy-playpen

./: .gitignore  .travis.yml  CONTRIBUTING.md  LICENSE  README.md  build-all-snaps  ci-run  template.README.md
2048/: README.md  snapcraft.yaml
LOVE/: README  README.md  launcher  snapcraft.yaml
arduino/: arduino-snap  snapcraft.yaml
atom/: .bzrignore  README.md  snapcraft.yaml  wrapper
baka-mplayer/: README.md  snapcraft.yaml
champ/: README.md  champ_wrapper  snapcraft.yaml
click-parser/: README.md  snapcraft.yaml
cloudfoundry-cli/: README.md  snapcraft.yaml
consul/: README.md  consul-snap  snapcraft.yaml
cuberite/: Cuberite.wrapper  README.md  snapcraft.yaml
dcos-cli/: README.md  snapcraft.yaml
deis-workflow-cli/: README.md  snapcraft.yaml
dekko/: README.md  dekko.launcher  snapcraft.yaml
docker/: README.md  snapcraft.yaml
docker-compose/: README.md  snapcraft.yaml
docker-distribution/: README.md  snapcraft.yaml
docker-machine/: snapcraft.yaml
docker-swarmkit/: README.md  snapcraft.yaml
dosbox/: README.md  snapcraft.yaml
electronic-wechat/: README.md  snapcraft.yaml  wechat.wrapper
etcd/: README.md  snapcraft.yaml
etherpad-lite/: .README.md.swp  Makefile  README.md  runpad  snapcraft.yaml  snapcrafting-is-not-easy-as-it-seems.md
ffmpeg/: README.md  ffmpeg  ffmpeg_3.0~git_source.tar.bz2  snapcraft.yaml
filezilla/: README.md  snapcraft.yaml
flightgear/: README.md  qt5-launch  snapcraft.yaml
galculator-snap/: README.md  galculator.wrapper
geany/: gtk-launch  (+1 more)
hellogl/: CMakeLists.txt  README.md  hellogl.c  snapcraft.yaml
(+1113 files in other folders)
